--- a/style.scss
+++ b/style.scss
@@ -65,6 +65,7 @@ nav {
 .ourwork {
   .container{
     text-align: center;
+    padding-bottom: 8rem;
     h3 {
       padding-top: 5rem;
       padding-bottom: 3rem;
