--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,15 @@ nav {
 
 }
 
+.fixed-nav nav {
+  position: fixed;
+  top:0;
+  z-index: 1;
+  width: 100%;
+  background-color: white;
+  opacity: .95;
+}
+
 .services {
   .row {
     text-align: center;
