--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@ $fontweight: 300;
 
 nav {
     background-color: #ffff;
-
+    margin: 0 auto;
     .navbar-nav {
                   padding-top: 30px;
                   padding-bottom: 30px;
@@ -22,6 +22,7 @@ nav {
   width: 100%;
   background-color: white;
   opacity: .95;
+
 }
 
 .services {
