--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,11 @@ nav {
                   padding-bottom: 30px;
                 }
 
+        span {
+          padding-left: 7px;
+          letter-spacing: 2px;
+        }
+
 }
 
 .fixed-nav nav {
